objects/FR_Record_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To be used to fetch different record types used</description>
    <fields>
        <fullName>FR_Account_RT_Id__c</fullName>
        <label>FR Account RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Agreement_RT_Id__c</fullName>
        <label>FR Agreement RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Contact_RT_Id__c</fullName>
        <label>FR Contact RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_LeasePayment_RT_Id__c</fullName>
        <label>FR LeasePayment RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_LeaseSchedule_RT_Id__c</fullName>
        <label>FR LeaseSchedule RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Opportunity_RT_Id__c</fullName>
        <label>FR Opportunity RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_PurchaseOrder_RT_Id__c</fullName>
        <label>FR PurchaseOrder RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Quote_RT_Id__c</fullName>
        <label>FR Quote RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_RoofDetails_RT_Id__c</fullName>
        <label>FR RoofDetails RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_SystemProduction_RT_Id__c</fullName>
        <label>FR SystemProduction RT Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>TPO FR Record Type</label>
</CustomObject>